# Fluid-AI

./: README.md
backend/: README.md  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/app/api/v1/endpoints/: task.py
backend/app/core/: config.py  dependencies.py  error_handler.py  exceptions.py  middleware.py
backend/app/model/: task.py
backend/app/models/: task.py
backend/app/repositories/: contract.py  database.py
backend/app/schema/: task.py
backend/app/services/: task.py
frontend/: README.md  package-lock.json
frontend/app/: globals.css  layout.tsx
frontend/app/tasks/: page.tsx
frontend/app/tasks/_components/: DeleteButton.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  ToggleThemeButton.tsx
frontend/libs/: api.ts
frontend/types/: task.ts
