[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "fastapi-utils>=0.8.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "typing-inspect>=0.9.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
